Fixed overlay toggle so that visibility does not toggle when a user opens overlay tools, re #885

--- a/arches/app/media/css/arches-nifty.css
+++ b/arches/app/media/css/arches-nifty.css
@@ -4528,7 +4528,7 @@ div.row.widget-wrapper.report-header:hover {
   padding-top: 5px;
 }
 
-.overlay-invisible {
+.overlay-invisible .relative {
   background-color: #f8f8f8;
 }
 
